--- a/notebooks/clv_automl.ipynb
+++ b/notebooks/clv_automl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,47 +15,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create and authenticate clients "
+    "## Initialize environment variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
+    "project_id = 'tensorflow-clv-331422'\n",
+    "location = 'us-central1'\n",
+    "client_options = {'api_endpoint': 'automl.googleapis.com:443'}\n",
     "keyfile_name = 'mykey.json'\n",
-    "client = automl_v1beta1.AutoMlClient.from_service_account_file(keyfile_name)\n",
-    "prediction_client = automl_v1beta1.PredictionServiceClient.from_service_account_file(keyfile_name)"
+    "\n",
+    "dataset_display_name = 'ltv'\n",
+    "bq_table='features_n_target'\n",
+    "model_display_name = 'clv_model_test1'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize some variables"
+    "## Create and authenticate clients "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_id = 'ml-clv'\n",
-    "location = 'us-central1'\n",
+    "client = automl_v1beta1.AutoMlClient(client_options=client_options).from_service_account_file(keyfile_name)\n",
+    "prediction_client = automl_v1beta1.PredictionServiceClient(client_options=client_options).from_service_account_file(keyfile_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'projects/tensorflow-clv-331422/locations/us-central1'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "location_path = client.location_path(project_id, location)\n",
-    "\n",
-    "dataset_display_name = 'clv_solution_test'\n",
-    "model_display_name = 'clv_model_test2'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "location_path"
    ]
   },
@@ -68,14 +81,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'projects/367596130023/locations/us-central1/datasets/TBL617851317775237120'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "create_dataset_response = client.create_dataset(\n",
     "  location_path,\n",
     "  {'display_name': dataset_display_name, 'tables_dataset_metadata': {}})\n",
-    "dataset_name = create_dataset_response.name"
+    "dataset_name = create_dataset_response.name\n",
+    "dataset_name"
    ]
   },
   {
@@ -87,22 +112,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'projects/367596130023/locations/us-central1/datasets/TBL617851317775237120'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset_list_response = client.list_datasets(location_path)\n",
     "dataset_list = [d for d in dataset_list_response]\n",
     "dataset = [d for d in dataset_list if d.display_name == dataset_display_name][0]\n",
-    "dataset_name = dataset.name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dataset_name = dataset.name\n",
     "dataset_name"
    ]
   },
@@ -115,11 +143,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bq://tensorflow-clv-331422.ltv.features_n_target'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_bq_input_uri = 'bq://{}.{}.{}'.format(project_id, dataset_display_name, bq_table)\n",
+    "dataset_bq_input_uri"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_bq_input_uri = 'bq://ml-clv.clv_auto.features_n_target'\n",
     "input_config = {\n",
     "  'bigquery_source': {\n",
     "      'input_uri': dataset_bq_input_uri}}\n",
@@ -128,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,9 +236,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label column ID: 2413939845631049728\n"
+     ]
+    }
+   ],
    "source": [
     "label_column_name = 'target_monetary'\n",
     "label_column_spec = column_specs[label_column_name]\n",
@@ -214,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,9 +286,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'frequency_dnn',\n",
+       " u'has_returned',\n",
+       " u'cnt_returns',\n",
+       " u'avg_basket_value',\n",
+       " u'avg_basket_size',\n",
+       " u'time_between',\n",
+       " u'T',\n",
+       " u'monetary_dnn',\n",
+       " u'recency']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feat_list"
    ]
@@ -246,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +332,7 @@
     "      'target_column_spec': column_specs['target_monetary'],\n",
     "      'input_feature_column_specs': [\n",
     "          column_specs[x] for x in feat_list],\n",
-    "      'train_budget_milli_node_hours': 10000,\n",
+    "      'train_budget_milli_node_hours': 1000,\n",
     "      'optimization_objective': 'MINIMIZE_MAE'\n",
     "  }\n",
     "}"
@@ -265,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,9 +351,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'projects/367596130023/locations/us-central1/models/TBL1533279960049909760'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "create_model_result = create_model_response.result()\n",
     "model_name = create_model_result.name\n",
@@ -313,9 +399,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name: \"projects/367596130023/locations/us-central1/models/TBL1533279960049909760/modelEvaluations/8878602014043014095\"\n",
+       "create_time {\n",
+       "  seconds: 1636342307\n",
+       "  nanos: 96292000\n",
+       "}\n",
+       "evaluated_example_count: 122\n",
+       "regression_evaluation_metrics {\n",
+       "  root_mean_squared_error: 2023.61425781\n",
+       "  mean_absolute_error: 745.727172852\n",
+       "  mean_absolute_percentage_error: 22.3629245758\n",
+       "  r_squared: 0.84898853302\n",
+       "  root_mean_squared_log_error: 0.304995328188\n",
+       "}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_evaluations = [e for e in client.list_model_evaluations(model_name)]\n",
     "model_evaluations[0]"
@@ -330,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -352,12 +461,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gcs_input_uri = \"gs://ml-clv_composer_final/predictions/to_predict.csv\"\n",
-    "gcs_output_uri_prefix = \"gs://ml-clv_composer_final/predictions\"\n",
+    "gcs_input_uri = \"gs://tensorflow-clv-331422_data_final/predictions/to_predict.csv\"\n",
+    "gcs_output_uri_prefix = \"gs://tensorflow-clv-331422_data_final/predictions\"\n",
     "\n",
     "# Define input source.\n",
     "batch_prediction_input_source = {\n",
@@ -374,17 +483,10 @@
     "}\n",
     "\n",
     "batch_predict_response = prediction_client.batch_predict(\n",
-    "  model_name, batch_prediction_input_source, batch_prediction_output_target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "  model_name, batch_prediction_input_source, batch_prediction_output_target)\n",
+    "\n",
     "while batch_predict_response.done() is False:\n",
-    "    time.sleep(1)"
+    "  time.sleep(1)"
    ]
   }
  ],
@@ -404,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.18"
   }
  },
  "nbformat": 4,
