initialize environment variables for automl notebook

--- a/notebooks/clv_automl.ipynb
+++ b/notebooks/clv_automl.ipynb
@@ -24,14 +24,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_id = 'tensorflow-clv-331422'\n",
-    "location = 'us-central1'\n",
-    "client_options = {'api_endpoint': 'automl.googleapis.com:443'}\n",
+    "project_id   = 'tensorflow-clv-331422'\n",
+    "location     = 'us-central1'\n",
     "keyfile_name = 'mykey.json'\n",
     "\n",
     "dataset_display_name = 'ltv'\n",
-    "bq_table='features_n_target'\n",
-    "model_display_name = 'clv_model_test1'"
+    "dataset_table_name   = 'features_n_target'\n",
+    "model_display_name   = 'clv_model_test1'\n",
+    "\n",
+    "gcs_input_uri         = \"gs://tensorflow-clv-331422_data_final/predictions/to_predict.csv\"\n",
+    "gcs_output_uri_prefix = \"gs://tensorflow-clv-331422_data_final/predictions\""
    ]
   },
   {
@@ -47,8 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = automl_v1beta1.AutoMlClient(client_options=client_options).from_service_account_file(keyfile_name)\n",
-    "prediction_client = automl_v1beta1.PredictionServiceClient(client_options=client_options).from_service_account_file(keyfile_name)"
+    "client = automl_v1beta1.AutoMlClient.from_service_account_file(keyfile_name)\n",
+    "prediction_client = automl_v1beta1.PredictionServiceClient.from_service_account_file(keyfile_name)"
    ]
   },
   {
@@ -158,7 +160,7 @@
     }
    ],
    "source": [
-    "dataset_bq_input_uri = 'bq://{}.{}.{}'.format(project_id, dataset_display_name, bq_table)\n",
+    "dataset_bq_input_uri = 'bq://{}.{}.{}'.format(project_id, dataset_display_name, dataset_table_name)\n",
     "dataset_bq_input_uri"
    ]
   },
@@ -217,7 +219,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# update column spec for 'has_returned'\n",
     "update_column_spec_dict = {\n",
     "  \"name\": column_specs['has_returned'].name,\n",
     "  \"data_type\": {\n",
@@ -465,9 +466,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gcs_input_uri = \"gs://tensorflow-clv-331422_data_final/predictions/to_predict.csv\"\n",
-    "gcs_output_uri_prefix = \"gs://tensorflow-clv-331422_data_final/predictions\"\n",
-    "\n",
     "# Define input source.\n",
     "batch_prediction_input_source = {\n",
     "  'gcs_source': {\n",
